--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/ThemeNoActionBar">
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".SplashActivity" />
-
-        <service android:name="org.eclipse.paho.android.service.MqttService" />
-
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.HomeActivity"></activity>
+        <activity android:name=".activity.SplashActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
+
+        <activity android:name=".activity.MainActivity">
+
         </activity>
     </application>
 
